django_project/k8s/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-comicserver
  labels:
    app: postgres-comicserver
spec:
   serviceName: "postgresql-service"
   volumeClaimTemplates:
   - metadata:
       name: dbase
     spec:
       accessModes: [ "ReadWriteOnce" ]
       resources:
         requests:
           storage: 5Gi
   replicas: 1
   selector:
      matchLabels:
         app: postgres-container
   template:
      metadata:
         labels:
            app: postgres-container
      spec:
         containers:
           - name: postgres-container
             image: postgres
             ports:
               - containerPort: 5432
             volumeMounts:
               - name: dbase
                 mountPath: /dbase/db
