django_project/k8s/dbase_cluster_ip.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip
spec:
  selector:
    app: postgres-container
  ports:
    - port: 5432 
      targetPort: 5432
  type: ClusterIP
