django_project/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comic-server
spec:
  selector:
    matchLabels:
      app: comic-server
  replicas: 1
  template:
    metadata:
      labels:
        app: comic-server
    spec:
      containers:
        - name: comic-server-container
          image: comic-server:0.1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: comic-server-clusterip
spec:
  selector:
    app: comic-server
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
